--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@shopify/react-native-skia": "^0.1.124",
     "cdt2d": "^1.0.0",
+    "euclidean-distance": "^1.0.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.4.1",
